add package service
pensando em adicionar padrão de projeto e apaguei algumas coisas que não estavam sendo usadas